--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     implementation 'xyz.belvi.mobilevision:barcodescanner:2.0.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'me.dm7.barcodescanner:zbar:1.9.8'
+    implementation 'com.google.firebase:firebase-ml-vision:16.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
