--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,13 @@
     package="qrcode.compare">
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera2.full" />
+
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="true"
@@ -17,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.MobileVisionActivity"
+        <activity
+            android:name=".activity.MobileVisionActivity"
             android:theme="@style/AppThemeTransparent" />
         <activity
             android:name=".activity.CustomScannerActivity"
@@ -26,6 +34,13 @@
         <activity
             android:name=".activity.ResultActivity"
             android:theme="@style/AppThemeTransparent" />
-        <activity android:name=".activity.ZXingActivity"></activity>
+        <activity android:name=".activity.ZXingActivity" />
+
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="barcode" />
+
+        <activity android:name=".activity.FirebaseQRActivity" />
+        <activity android:name=".activity.Camera2Activity" />
     </application>
 </manifest>
